@startuml

package infra {
    class Score
    class ScoreBoard
}

package infra_event{
    class Event
    class Event_Bus
    class Event_Store
}

package model {
    class Model
}

package view {
    struct ViewContext
    abstract class View_Renderer

    package ui{
    }
    class RenderFrame
}

package controller {
    class Event_Collector
    interface Controller
}

package core {
    class Game
    abstract class Stage
    class Stage_Manager
    class Stage_Factory
}

ViewContext ..> ui: consumed by

Event --> Event_Bus: emits in
Event_Store --> Event: collect

ScoreBoard --> Score : create

Model o-- Score

ui -> RenderFrame: interpreted

RenderFrame -> View_Renderer: being drawn

View_Renderer ..> Event_Bus: listen

Event_Collector -> Controller : informs
Event_Collector ..> View_Renderer : listen

Stage *-- Controller
Stage o-- Model
Stage --> ViewContext: submits information
Stage --> Event_Store: store
Stage ..>  Score: read-only
Stage ..>  ScoreBoard: read-only

Stage_Manager *-- Stage
Stage_Manager -->Stage_Factory: asks to create

Stage_Factory *-- Score
Stage_Factory *-- Model
Stage_Factory --> Stage: creates

Game *-- ScoreBoard
Game *-- Stage_Manager
Game *-- Stage_Factory
Game *-- View_Renderer
Game ..> Event_Bus: listen

@enduml